# nann

./: .tf_configure.bazelrc  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING.md  README-cn.md  README.md  WORKSPACE  build_whl.sh
blaze-benchmark/: .clang-format  Build.sh  CMakeLists.txt  README.md
blaze-benchmark/benchmark/: CMakeLists.txt
blaze-benchmark/benchmark/common/: common_defines.h  double_buffer_reloader.h  proto_configure.cc  proto_configure.h  queue.h
blaze-benchmark/benchmark/core/: benchmark.cc  device_util.cc  device_util.h  graph_util.cc  graph_util.h  metrics.cc  metrics.h  model.cc  model.h  node_util.cc  node_util.h  predict_request_consumer.cc  predict_request_consumer.h  predict_request_producer.cc  predict_request_producer.h
blaze-benchmark/benchmark/proto/: bench_conf.proto
blaze-benchmark/example/DNN/ad_rtp_target_cnxh_ctr_ugic_main_nmd_cat_turing_rec/: ad_rtp_target_cnxh_ctr_ugic_main_nmd_cat_turing_rec_parted_search.pbtxt  benchmark_conf  config_proto  run_options
blaze-benchmark/example/DNN/ad_rtp_wt_ctr_wt_union_v1_turing_measure/: 1656400837458256.runmeta  ad_rtp_wt_ctr_wt_union_v1_turing_measure_parted_search.pbtxt  benchmark_conf  config_proto  log.a10  log.a100  log.t4  meta_graph  run.sh
blaze-benchmark/example/DNN/ad_rtp_wt_ctr_wt_union_v1_turing_measure/xla_cache/: 1052952838330645825.hlomodule  1052952838330645825.ptx  1130720072649037239.hlomodule  1130720072649037239.ptx  3607916307657717898.hlomodule  3607916307657717898.ptx  448690780835910862.hlomodule  448690780835910862.ptx  991777975136270656.hlomodule  991777975136270656.ptx
blaze-benchmark/example/DNN/all_star_newstag_nmd_jrc/: 1656993881179967.runmeta  benchmark_conf  config_proto  log.a10  log.a100  log.t4  run.sh
blaze-benchmark/example/DNN/all_star_newstag_nmd_jrc/item/: all_star_newstag_nmd_jrc_parted_search.pbtxt
blaze-benchmark/example/DNN/all_star_newstag_nmd_jrc/user/: all_star_newstag_nmd_jrc_parted_search.pbtxt  frozen_graph.pb
blaze-benchmark/example/DNN/all_star_newstag_nmd_jrc/xla_cache/: 1983045345017676653.hlomodule  1983045345017676653.ptx  272981875615786952.hlomodule  272981875615786952.ptx  4587597339859234581.hlomodule  4587597339859234581.ptx  4695837893004515636.hlomodule  4695837893004515636.ptx
blaze-benchmark/example/DNN/amie_ad_rtp/: search_graph.pbtxt
blaze-benchmark/example/DNN/dqm_ltr_ndcg_lite_nmd_npu_turing/: frozen_graph.pb  frozen_graph_npu.pb  opt_default.conf  search_graph.pbtxt
blaze-benchmark/example/DNN/kgb_nezha_v3_odl/: 1658222481552305.runmeta.REMOVED.git-id  benchmark_conf  config_proto  kgb_nezha_v3_odl_parted_search.pbtxt.REMOVED.git-id  log.a10  log.a100  log.t4  meta_graph
blaze-benchmark/example/DNN/kgb_sonic_v2_async_odl/: 1658211794322816.runmeta.REMOVED.git-id  benchmark_conf  config_proto  kgb_sonic_v2_async_odl_parted_search.pbtxt.REMOVED.git-id  log.a10  log.a100  log.t4  meta_graph
blaze-benchmark/example/MDL/CLIP4Clip/: README.md  test_main.py
blaze-benchmark/example/MDL/CLIP4Clip/modules/: auxilary.py  modeling.py  modeling_no_grad.py  module_clip.py  module_clip_no_grad.py  task_config.py  until_config.py
blaze-benchmark/example/MDL/HRNet/: README.md  test_main.py
blaze-benchmark/example/MDL/MaskMatting/: README.md  matting.py  test_matting.py
blaze-benchmark/example/MDL/MaskMatting/cqutils/: __init__.py  common.py  evaluation.py  extend_transforms.py  image_attribute_transforms.py  imageproc.py  joint_transforms.py  media_center_io.py  misc.py  mlog.py  resize_foreground.py  th.py  utils.py  vis.py  yolo_utils.py
blaze-benchmark/example/MDL/MaskMatting/networks/: Layers.py  Loss.py  PSPnet.py  Saliency.py  __init__.py  ada_trimap_matting.py  affinity_boundary_loss.py  aspp.py  auto_deeplab.py  backbone.py  backbone.py.bak  config.py  decoder.py  deeplab.py  deeplab_v1.py  deeplab_v2.py  deeplab_v3.py  deeplab_v3_plus.py  deeplabv3plus.py  (+26 more)
blaze-benchmark/example/MDL/TASEDNet/: .gitignore  README.md  model.py  test_main.py
blaze-benchmark/example/MDL/outpainting/: README.md  test_main.py
blaze-benchmark/example/MDL/tts-gpt2/: .gitignore  .gitmodules  Dockerfile  Dockerfile_base  README.md  build_aone.sh  get-pict-label.release  requirement.txt
blaze-benchmark/user_ops/: CMakeLists.txt  blaze_xla_kernel.cc
(+317 files in other folders)
